Fix go package change
